# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/task_manager/: admin.py  base_forms.py  forms.py  models.py  urls.py  views.py
mysite/task_manager/migrations/: 0001_initial.py  0002_rename_user_users.py  0003_statuses_tags_tasks_delete_users.py  0004_rename_tags_status_rename_statuses_tag_and_more.py
mysite/task_manager/templates/task_manager/: 1.html  create.html  index.html  login.html  registration.html  users.html
mysite/task_manager/templates/task_manager/auth/: login.html  registration.html
mysite/task_manager/templates/task_manager/status/: delete.html  statuses.html  update.html
mysite/task_manager/templates/task_manager/tag/: delete.html  tags.html  update.html
mysite/templates/: base.html
mysite/templates/include/: _navbar.html
