[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["melloru <pythonubuntu12@gmail.com>"]
readme = "README.md"
packages = [
    {include = "mysite"}
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
django = "^5.1.2"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
flake8 = "^7.1.1"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
gunicorn = "^23.0.0"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
